# code-agent-replication

./: .gitignore  CLAUDE.md  CodeAgent_Final.ipynb  LICENSE  README.md  pyproject.toml  requirements.txt  setup.sh
datasets/: all_py_content.jsonl  final_dataset.jsonl  mini_transformers_codebase.jsonl  mini_transformers_tasks.jsonl
notebooks/: Benchmark_Generator.ipynb
src/codeagent/: __init__.py
src/codeagent/agents/: __init__.py  factory.py  prompts.py
src/codeagent/benchmarks/: __init__.py  analysis.py  base.py  codeagent_bench.py  loader.py  mini_transformers.py
src/codeagent/config/: __init__.py  quantization.py  secrets.py  settings.py
src/codeagent/evaluation/: __init__.py  human_eval.py  metrics.py  no_agent_baseline.py  pipeline.py  repository_setup.py  task_runner.py
src/codeagent/llm/: __init__.py  factory.py  gemini_provider.py  huggingface.py  openai_provider.py
src/codeagent/tools/: __init__.py  code_interpreter.py  doc_search.py  format_checker.py  summarizer.py  symbol_navigation.py  web_search.py
src/codeagent/utils/: __init__.py  api_guide.py  code_cleaning.py  file_ops.py  seed.py
tests/: __init__.py  conftest.py  test_agents.py  test_benchmarks.py  test_evaluation.py  test_utils.py
tests/tools/: __init__.py  test_code_interpreter.py  test_doc_search.py  test_format_checker.py  test_symbol_navigation.py
